--- a/vistools/geospatial.html
+++ b/vistools/geospatial.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name=”viewport” content=”width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no” />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Geospatial</title>
-    <style type="text/css">
+    <style>
       body, cesiumContainer { background-color: black; }
     </style>
     <!--Debug set
